# opti_test

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  performance_opti_test.db  pyproject.toml  sitemap.xml
.github/workflows/: docs.yaml  test.yaml
docs/: index.md  introduction.md  performance-tests.md  principles.md  slides.md  unit-tests.md
interfaces/: app.py  cli.py  notebook.ipynb
introduction/: index.html
opti_test/: array_cable_problem.py  classes.py  model_builder.py  model_data.py  utils.py
performance-tests/: index.html
principles/: index.html
search/: search_index.json
slides/: index.html
tests/: performance.py  test_classes.py  test_model_builder.py  test_model_data.py
tests/test_cases/: large.json  medium.json  small.json
unit-tests/: index.html
