[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opti_test"
description = 'Project to show how to test mathematical optimizaton code'
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "Richard Oberdieck", email = "r.oberdieck@gmail.com"}
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pydantic",
  "pandas",
  "plotly",
  "numpy",
  "shapely",
  "streamlit",
  "pyoptinterface[highs]"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/RichardOberdieck/opti_test/blob/main/README.md"
Issues = "https://github.com/RichardOberdieck/opti_test/issues"
Source = "https://github.com/RichardOberdieck/opti_test"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "opti_test/__init__.py"

[tool.hatch.build]
include = [       
   "opti_test/*.py",
]

[project.optional-dependencies]
app = [
  "streamlit"
]
cli = [
  "click"
]
test = [
  "pytest",
  "pytest-cov",
  "pre-commit",
  "hypothesis"
]
docs = [
  "mkdocs", 
  "mkdocs-material",
  "mkdocstrings[python]",
  "mkdocs-plotly-plugin"
]

[tool.hatch.envs.default]
installer = "uv"

[tool.hatch.envs.test]
dependencies = ["opti_test[test]"]

[tool.hatch.envs.test.scripts]
base = "pytest {args}"
code_check = "pre-commit run --all-files"
performance = "python tests/performance.py"

[[tool.hatch.envs.test.matrix]]
python = ["3.11", "3.12", "3.13"]

[tool.hatch.envs.app]
dependencies = ["opti_test[app]"]

[tool.hatch.envs.app.scripts]
run = "streamlit run interfaces/app.py"

[tool.hatch.envs.cli]
dependencies = ["opti_test[app]"]

[tool.hatch.envs.cli.scripts]
run = "python -m interfaces.cli {args}"

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "opti_test/__init__.py",
  "tests/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
fail_under = 90

[tool.hatch.envs.docs]
dependencies = ["opti_test[docs]"]

[tool.hatch.envs.docs.scripts]
build = "mkdocs build --clean"
serve = "mkdocs serve --dev-addr localhost:8000"
deploy = "mkdocs gh-deploy --force"

[tool.ruff]
line-length = 120
indent-width = 4
target-version = "py312"
